--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </div>
 
             <div class="form-group">
-                <label for="question1">Do you know what sustainable fashion is</label>
+                <label for="question1">Do you know what "sustainable fashion" is</label>
                 <select name="question1" id="dropdown">
                     <option selected disabled value>Select Your Choice</option>
                     <option value="Yes">Yes</option>
@@ -123,43 +123,6 @@
                 <div class="radio-group">
                     <input type="radio" name="question7" id="definitely" value="Body"><label for="definitely">
                         Your body type 
-                    </label>
-                </div>
-            </div>
-
-            <div class="form-group">
-                <label for="liked">Select Things That You Liked About Our Product</label>
-                <div class="checkbox-group">
-                    <input type="checkbox" name="liked" id="ui" value="ui"><label for="ui">
-                        <svg class="check-mark-svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100">
-                            <polyline class="check-mark-svg-path" points="25.5,53.5 39.5,67.5 72.5,34.5 " />
-                        </svg>
-                        <span>UI</span>
-                    </label>
-                </div>
-                <div class="checkbox-group">
-                    <input type="checkbox" name="liked" id="features" value="features"><label for="features">
-                        <svg class="check-mark-svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100">
-                            <polyline class="check-mark-svg-path" points="25.5,53.5 39.5,67.5 72.5,34.5 " />
-                        </svg>
-                        <span>Features</span>
-                    </label>
-                </div>
-                <div class="checkbox-group">
-                    <input type="checkbox" name="liked" id="service" value="service"><label for="service">
-                        <svg class="check-mark-svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100">
-                            <polyline class="check-mark-svg-path" points="25.5,53.5 39.5,67.5 72.5,34.5 " />
-                        </svg>
-                        <span>Service</span>
-                    </label>
-                </div>
-                <div class="checkbox-group">
-                    <input type="checkbox" name="liked" id="simpleness" value="simpleness"><label for="simpleness">
-                        <svg class="check-mark-svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100">
-                            <polyline class="check-mark-svg-path" points="25.5,53.5 39.5,67.5 72.5,34.5 " />
-                        </svg>
-
-                        <span>Simpleness</span>
                     </label>
                 </div>
             </div>
