--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </div>
 
              <div class="form-group">
-                <label for="question2">Do you worry about the global implications of the fashion industry on the society and environment?</label>
+                <label for="question2">Do you worry about the negative implications of fashion on the environment?</label>
                 <select name="question2" id="dropdown">
                     <option selected disabled value>Select Your Choice</option>
                     <option value="Yes">Yes</option>
